hphp/test/zend/good/ext/hash/tests/fnv132.php.skipif
<?php
<<__EntryPoint>> function main() {
extension_loaded('hash') or die ('Skip - hash extension not available');
}
