hphp/test/zend/bad/ext/hash/tests/joaat.php.skipif
<?php extension_loaded('hash') or die ('Skip - hash extension not available'); ?>